<resources>
    <string name="app_name">GastAR</string>
    <string name="person_icon_descriptor">Persona:</string>
    <string name="add_element">Añadir</string>
    <string name="product_total_price">Total: $0.00</string>
    <string name="add_product">Agregar Producto</string>
    <string name="add_product_modal_title">Agregar producto</string>
    <string name="name_field_placeholder">Nombre</string>
    <string name="price_field_placeholder">Precio</string>
    <string name="payed_by_label">¿Quién pago por esto?</string>
    <string name="add_food_eaters_label">Agrega comensales...</string>
    <string name="login_email_label">Email</string>
    <string name="login_password_label">Contraseña</string>
    <string name="login_btn_text">Ingresar</string>
    <string name="hint_email_login">elprofe@gastarapp.com.ar</string>
    <string name="hint_password_login">perritomalvado123</string>
    <string name="logout_btn">Cerrar sesión</string>
    <string name="add_product_btn">+ Añadir producto</string>
    <string name="product_name_hint">Nombre del producto...</string>
    <string name="product_name_label">Nombre del producto:</string>
    <string name="product_price_label">Precio del producto:</string>
    <string name="add_product_title">Añadir Producto</string>
    <string name="add_persons_title">Añade personas</string>
    <string name="add_person_btn">+ Añadir persona</string>
</resources>
