<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_email_label" />

        <EditText
            android:id="@+id/login_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/hint_email_login"
            android:inputType="textEmailAddress"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:padding="4dp"
            android:labelFor="@+id/login_email_label" />

        <TextView
            android:id="@+id/login_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_password_label" />

        <EditText
            android:id="@+id/login_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/hint_password_login"
            android:inputType="textPassword"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:padding="4dp"

            android:labelFor="@+id/login_password_label" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/login_btn_text" />

        <ProgressBar
            android:id="@+id/progress_loader"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>