<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/product_fields_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:padding="8dp"
        android:background="@color/secondary"
        android:text="@string/add_product_title" />

    <LinearLayout
        android:id="@+id/product_price_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name_hint"
            android:text="@string/product_name_label" />

        <EditText
            android:id="@+id/product_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:inputType="text"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/price_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_price_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/currency_selector"
                android:layout_width="0dp"
                android:padding="4dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/price_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="3dp"
                android:background="@color/primary"
                android:textColor="@color/white"
                android:inputType="number" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>