<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/secondary"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/person_fields_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="8dp"
            android:text="@string/add_persons_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <ImageButton
            android:id="@+id/add_person_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/secondary"
            android:contentDescription="@string/add_product"
            android:src="@drawable/add_product_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/payed_by_label">
        </TextView>
        <Spinner
            android:id="@+id/food_payer"
            android:padding="4dp"
            android:layout_marginBottom="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/person_list"
        android:layout_width="match_parent"
        android:backgroundTint="@color/gray"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>